syntax = "proto3";

option go_package=".;proto";

service Greeter{
  //服务端流模式
  rpc GetStream (StreamReqData) returns (stream StreamRespData);
  //客户端流模式
  rpc PostStream (stream StreamReqData) returns ( StreamRespData);
  //双向流模式
  rpc AllStream (stream StreamReqData) returns (stream StreamRespData);
}

message StreamReqData{
  string data = 1;
}

message StreamRespData{
  string data =1;
}